update options in quiz question

--- a/src/components/Question.css
+++ b/src/components/Question.css
@@ -41,6 +41,7 @@
     }
 
     &.success {
+      opacity: 1 !important;
       background-color: var(--clr-success);
       border-color: var(--clr-success);
     }
